resolve security issue

--- a/src/template_lambda_APIG.yaml
+++ b/src/template_lambda_APIG.yaml
@@ -121,7 +121,7 @@ Resources:
             Version: '2012-10-17'
             Statement:
               - Effect: 'Allow'
-                Action: 'lambda:*'
+                Action: 'lambda:InvokeFunction'
                 Resource: !GetAtt LambdaFunction.Arn
 
 # Lambda Function with Sample inline code
