resolve security issue

--- a/src/template_lambda_APIG.yaml
+++ b/src/template_lambda_APIG.yaml
@@ -143,6 +143,7 @@ Resources:
       FunctionName: !Ref pLambdaFunctionName
       Handler: index.handler
       MemorySize: 256
+      ReservedConcurrentExecutions: 100
       Role: !GetAtt LambdaIamRole.Arn
       Runtime: python3.8
       Timeout: 60
@@ -161,3 +162,14 @@ Resources:
             Action:
               - 'sts:AssumeRole'
       Path: '/'
+      Policies:
+        - PolicyName: root
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+            - Effect: Allow
+              Action:
+              - logs:CreateLogGroup
+              - logs:CreateLogStream
+              - logs:PutLogEvents
+              Resource: arn:aws:logs:*:*:*
