--- a/src/template_lambda_url.yaml
+++ b/src/template_lambda_url.yaml
@@ -18,6 +18,10 @@ Metadata:
     ParameterLabels:
       pLambdaFunctionName:
         default: Lambda Function Name
+      pVPCSecurityGroup:
+        default: Security Group Name
+      pVPCSubnet:
+        default: Subnet Name
 
 ###
 ### Template input parameters
@@ -28,6 +32,12 @@ Parameters:
     Type: String
     AllowedPattern: ^[a-zA-Z0-9-\-_.]{3,63}
     Description: Name of the Lambda Function
+  pVPCSecurityGroup:
+    Type: String
+    Description: Name of VPC Security Group
+  pVPCSubnet:
+    Type: String
+    Description: Name of Subnet under VPC 
 
 
 Resources:
@@ -49,6 +59,11 @@ Resources:
             return response          
       Description: AWS Lambda function
       FunctionName: !Ref pLambdaFunctionName
+      VpcConfig:
+        SecurityGroupIds:
+          - Ref: pVPCSecurityGroup	
+        SubnetIds:
+          - Ref: pVPCSubnet
       Handler: index.handler
       MemorySize: 256
       ReservedConcurrentExecutions: 100
