--- a/src/template_lambda_url.yaml
+++ b/src/template_lambda_url.yaml
@@ -33,11 +33,11 @@ Parameters:
     AllowedPattern: ^[a-zA-Z0-9-\-_.]{3,63}
     Description: Name of the Lambda Function
   pVPCSecurityGroup:
-    Type: String
-    Description: Name of VPC Security Group
+    Type: AWS::EC2::SecurityGroup::Id
+    Description: Select VPC Security Group
   pVPCSubnet:
-    Type: String
-    Description: Name of Subnet under VPC 
+    Type: AWS::EC2::Subnet::Id
+    Description: Select Subnet under VPC 
 
 
 Resources:
@@ -60,8 +60,8 @@ Resources:
       Description: AWS Lambda function
       FunctionName: !Ref pLambdaFunctionName
       VpcConfig:
-        SecurityGroupIds:
-          - Ref: pVPCSecurityGroup	
+        SecurityGroupIds: 
+          - Ref: pVPCSecurityGroup
         SubnetIds:
           - Ref: pVPCSubnet
       Handler: index.handler
